# StoronaSklep

./: .gitignore  Projekt.md  README.md  Strona Kanban.md  docker-compose.yml  pyproject.toml
Excalidraw/: Projekt-strony.excalidraw.md
Excalidraw/.obsidian/: workspace.json
Report/: Report-AI.docx  Report-BiOD.docx
SklepInternetowy/: db.sqlite3
SklepInternetowy/SklepInternetowy/: config.ini  settings.py  urls.py  wsgi.py
SklepInternetowy/main/: models.py  urls.py  views.py
SklepInternetowy/main/migrations/: 0001_initial.py
SklepInternetowy/main/static/main/: style.css
SklepInternetowy/main/templates/main/: about.html  index.html  o_nas.html  products.html  user_change_password_success.html  user_login.html  user_logout.html  user_profile.html  user_register.html  (+1 more)
site/: main.html
sklepinternetowy/: run_uvicorn.py
sklepinternetowy/SklepInternetowy/: asgi.py  settings.py  settings_example.py  urls.py
sklepinternetowy/main/: admin.py  forms.py  models.py  urls.py  views.py
sklepinternetowy/main/migrations/: 0002_clients_promotions_remove_products_valid_until_and_more.py  0003_promotions_promo_products_and_more.py  0004_delete_clients_alter_products_last_updated.py  0005_alter_products_last_updated.py  0006_alter_products_last_updated.py  0007_alter_products_last_updated.py  0008_alter_products_last_updated.py  0009_cart.py  0010_cart_count_items_alter_products_stock.py  0011_products_product_img.py  0012_products_price.py  0013_products_product_promo.py  0014_remove_products_product_img_and_more.py
sklepinternetowy/staticfiles/main/: style.css
(+22 files in other folders)
